fix layout break when search user on mobile view. occur when not all thumbs have an image.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -129,6 +129,7 @@
 @media screen and (max-width: 480px) {
   #user-profile {
     width: 100%;
+
     .user-desc {
       float: none;
       width: 100%;
@@ -150,6 +151,7 @@
   .user {
     width: 100%;
     padding: 0;
+    margin: 14px 0 0;
     height: auto;
     .user-realname, .profile-picture, .user-ads, .user-score {
       text-align: center;
@@ -158,14 +160,11 @@
       float: none;
     }
     .user-ads {
-      width: 100%;
+      width: 210px;
+      margin: 0 auto;
     }
     .user-score {
       margin-bottom: 0;
-    }
-    .user-mini-ad {
-      float: none;
-      display: inline-block;
     }
     .follow-action {
       padding: 0;
